test/fail/A/M.agda
module A.M where

import A.B.M
